[package]
name = "regioned"
version = "2.0.0"
edition = "2021"

[dependencies.arena]
git = "https://github.com/Rerumu/Arena.git"
rev = "471b9e1"

[dependencies.set]
git = "https://github.com/Rerumu/Set.git"
rev = "492b2f8"

[dependencies.list]
git = "https://github.com/Rerumu/List.git"
rev = "63a9a13"

[features]
display = []
