[package]
name = "regioned"
version = "2.0.0"
edition = "2021"

[dependencies.arena]
git = "https://github.com/Rerumu/Arena.git"
rev = "0f02011"

[dependencies.set]
git = "https://github.com/Rerumu/Set.git"
rev = "0e6d012"

[dependencies.list]
git = "https://github.com/Rerumu/List.git"
rev = "2464410"

[features]
display = []
